potential display fix on ios

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,11 @@ a, a:visited{
 
 .App {
   text-align: center;
-  
-  min-height: 100vh;
+
+  position: fixed;
+  height: 100%;
+  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
